# rs-htmx-portfolio

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  Readme.md  migration.md
migrations/: .gitkeep  20240505235704_initial.down.sql  20240505235704_initial.up.sql
public/css/: .gitkeep  output.css
src/: auth_middleware.rs  db_config.rs  error_handling.rs  main.rs  static_file_handler.rs  utils.rs
src/auth/: auth_middleware.rs  cookies_and_jwt.rs  decode_jwt_token_middleware.rs  jwt_token.rs  mod.rs  password.rs
src/config/: db_config.rs
src/errors/: api_error.rs
src/repository/: education.rs  experience.rs  mod.rs
src/templates/: attributes.rs  layout.rs  mod.rs
src/templates/components/: button.rs  card.rs  dialog.rs  input.rs  link.rs  mod.rs
src/templates/layout/: mod.rs
src/templates/pages/: about_page.rs  login_page.rs  mod.rs  root.rs  root_page.rs  signup_page.rs  update_portfolio_page.rs
src/templates/pages/root_page/: mod.rs
src/templates/pages/update_portfolio/: components.rs  mod.rs  update_portfolio_page.rs
src/templates/pages/update_portfolio/education/: edit_education_dialog.rs  edit_education_post_handler.rs  mod.rs
src/templates/pages/update_portfolio/experience/: edit_experience_dialog.rs  edit_experience_post_handler.rs  mod.rs
src/templates/pages/update_portfolio_page/: edit_experience.rs  mod.rs  update_portfolio_page.rs  update_portfolio_post_handler.rs
src/utils/: app_serde.rs  env.rs  mod.rs
