[package]
name = "rs-portfolio-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
mime_guess = "2.0.4"
rust-embed = { version = "8.3.0", features = ["axum", "axum-ex"] }
serde = { version = "1.0.200", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
shtml = { git = "https://github.com/amantuladhar/shtml", version = "0.2.0", branch = "optional-attr" }
tokio = { version = "1.37.0", features = ["full"] }
# tower-http = { version = "0.5.0", features = ["fs", "trace"] }
