[package]
name = "rs-portfolio-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
argon2 = "0.5.3"
#async-trait = "0.1.80"
#axum = { version = "0.7.5", features = ["macros"] }
axum = { version = "0.7.5" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
mime_guess = "2.0.4"
rust-embed = { version = "8.3.0", features = ["axum", "axum-ex"] }
serde = { version = "1.0.200", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
shtml = { git = "https://github.com/amantuladhar/shtml", version = "0.2.0", branch = "optional-attr" }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev.package.sqlx-macros]
opt-level = 3
